apps/stage/hello-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-node
  namespace: hello-app
  labels:
    app.kubernetes.io/name: hello-node
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-node
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-node
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: hello-node
          image: 128955061512.dkr.ecr.us-east-2.amazonaws.com/hello-world:cd4cf37523ad89d5b09e8c00dbe3942043feb031
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            readOnlyRootFilesystem: true
