apps/stage/hello-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-node
  namespace: hello-app
  labels:
    app.kubernetes.io/name: hello-node
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hello-node
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
